parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> VAR ID ASSIGN expression SEMICOLON
Rule 2     statement -> ID ASSIGN expression SEMICOLON
Rule 3     statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 4     statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 5     statements -> statements statement
Rule 6     statements -> statement
Rule 7     expression -> expression PLUS expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> expression TIMES expression
Rule 10    expression -> expression DIVIDE expression
Rule 11    expression -> expression GT expression
Rule 12    expression -> expression LT expression
Rule 13    expression -> expression GE expression
Rule 14    expression -> expression LE expression
Rule 15    expression -> expression EQ expression
Rule 16    expression -> expression NE expression
Rule 17    expression -> expression AND expression
Rule 18    expression -> expression OR expression
Rule 19    expression -> NOT expression
Rule 20    expression -> STRING
Rule 21    expression -> NUMBER
Rule 22    expression -> ID
Rule 23    expression -> TRUE
Rule 24    expression -> FALSE

Terminals, with rules where they appear

AND                  : 17
ASSIGN               : 1 2
DIVIDE               : 10
EQ                   : 15
FALSE                : 24
GE                   : 13
GT                   : 11
ID                   : 1 2 22
IF                   : 4
LBRACE               : 4
LE                   : 14
LPAREN               : 3 4
LT                   : 12
MINUS                : 8
NE                   : 16
NOT                  : 19
NUMBER               : 21
OR                   : 18
PLUS                 : 7
PRINT                : 3
RBRACE               : 4
RPAREN               : 3 4
SEMICOLON            : 1 2 3
STRING               : 20
TIMES                : 9
TRUE                 : 23
VAR                  : 1
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 3 4 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19
statement            : 5 6 0
statements           : 4 5

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . VAR ID ASSIGN expression SEMICOLON
    (2) statement -> . ID ASSIGN expression SEMICOLON
    (3) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (4) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE

    VAR             shift and go to state 2
    ID              shift and go to state 3
    PRINT           shift and go to state 4
    IF              shift and go to state 5

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> VAR . ID ASSIGN expression SEMICOLON

    ID              shift and go to state 6


state 3

    (2) statement -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 7


state 4

    (3) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 8


state 5

    (4) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 9


state 6

    (1) statement -> VAR ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 10


state 7

    (2) statement -> ID ASSIGN . expression SEMICOLON
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 12

state 8

    (3) statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 18

state 9

    (4) statement -> IF LPAREN . expression RPAREN LBRACE statements RBRACE
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 19

state 10

    (1) statement -> VAR ID ASSIGN . expression SEMICOLON
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 20

state 11

    (22) expression -> ID .

    SEMICOLON       reduce using rule 22 (expression -> ID .)
    PLUS            reduce using rule 22 (expression -> ID .)
    MINUS           reduce using rule 22 (expression -> ID .)
    TIMES           reduce using rule 22 (expression -> ID .)
    DIVIDE          reduce using rule 22 (expression -> ID .)
    GT              reduce using rule 22 (expression -> ID .)
    LT              reduce using rule 22 (expression -> ID .)
    GE              reduce using rule 22 (expression -> ID .)
    LE              reduce using rule 22 (expression -> ID .)
    EQ              reduce using rule 22 (expression -> ID .)
    NE              reduce using rule 22 (expression -> ID .)
    AND             reduce using rule 22 (expression -> ID .)
    OR              reduce using rule 22 (expression -> ID .)
    RPAREN          reduce using rule 22 (expression -> ID .)


state 12

    (2) statement -> ID ASSIGN expression . SEMICOLON
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . TIMES expression
    (10) expression -> expression . DIVIDE expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression

    SEMICOLON       shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    DIVIDE          shift and go to state 25
    GT              shift and go to state 26
    LT              shift and go to state 27
    GE              shift and go to state 28
    LE              shift and go to state 29
    EQ              shift and go to state 30
    NE              shift and go to state 31
    AND             shift and go to state 32
    OR              shift and go to state 33


state 13

    (19) expression -> NOT . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 34

state 14

    (20) expression -> STRING .

    SEMICOLON       reduce using rule 20 (expression -> STRING .)
    PLUS            reduce using rule 20 (expression -> STRING .)
    MINUS           reduce using rule 20 (expression -> STRING .)
    TIMES           reduce using rule 20 (expression -> STRING .)
    DIVIDE          reduce using rule 20 (expression -> STRING .)
    GT              reduce using rule 20 (expression -> STRING .)
    LT              reduce using rule 20 (expression -> STRING .)
    GE              reduce using rule 20 (expression -> STRING .)
    LE              reduce using rule 20 (expression -> STRING .)
    EQ              reduce using rule 20 (expression -> STRING .)
    NE              reduce using rule 20 (expression -> STRING .)
    AND             reduce using rule 20 (expression -> STRING .)
    OR              reduce using rule 20 (expression -> STRING .)
    RPAREN          reduce using rule 20 (expression -> STRING .)


state 15

    (21) expression -> NUMBER .

    SEMICOLON       reduce using rule 21 (expression -> NUMBER .)
    PLUS            reduce using rule 21 (expression -> NUMBER .)
    MINUS           reduce using rule 21 (expression -> NUMBER .)
    TIMES           reduce using rule 21 (expression -> NUMBER .)
    DIVIDE          reduce using rule 21 (expression -> NUMBER .)
    GT              reduce using rule 21 (expression -> NUMBER .)
    LT              reduce using rule 21 (expression -> NUMBER .)
    GE              reduce using rule 21 (expression -> NUMBER .)
    LE              reduce using rule 21 (expression -> NUMBER .)
    EQ              reduce using rule 21 (expression -> NUMBER .)
    NE              reduce using rule 21 (expression -> NUMBER .)
    AND             reduce using rule 21 (expression -> NUMBER .)
    OR              reduce using rule 21 (expression -> NUMBER .)
    RPAREN          reduce using rule 21 (expression -> NUMBER .)


state 16

    (23) expression -> TRUE .

    SEMICOLON       reduce using rule 23 (expression -> TRUE .)
    PLUS            reduce using rule 23 (expression -> TRUE .)
    MINUS           reduce using rule 23 (expression -> TRUE .)
    TIMES           reduce using rule 23 (expression -> TRUE .)
    DIVIDE          reduce using rule 23 (expression -> TRUE .)
    GT              reduce using rule 23 (expression -> TRUE .)
    LT              reduce using rule 23 (expression -> TRUE .)
    GE              reduce using rule 23 (expression -> TRUE .)
    LE              reduce using rule 23 (expression -> TRUE .)
    EQ              reduce using rule 23 (expression -> TRUE .)
    NE              reduce using rule 23 (expression -> TRUE .)
    AND             reduce using rule 23 (expression -> TRUE .)
    OR              reduce using rule 23 (expression -> TRUE .)
    RPAREN          reduce using rule 23 (expression -> TRUE .)


state 17

    (24) expression -> FALSE .

    SEMICOLON       reduce using rule 24 (expression -> FALSE .)
    PLUS            reduce using rule 24 (expression -> FALSE .)
    MINUS           reduce using rule 24 (expression -> FALSE .)
    TIMES           reduce using rule 24 (expression -> FALSE .)
    DIVIDE          reduce using rule 24 (expression -> FALSE .)
    GT              reduce using rule 24 (expression -> FALSE .)
    LT              reduce using rule 24 (expression -> FALSE .)
    GE              reduce using rule 24 (expression -> FALSE .)
    LE              reduce using rule 24 (expression -> FALSE .)
    EQ              reduce using rule 24 (expression -> FALSE .)
    NE              reduce using rule 24 (expression -> FALSE .)
    AND             reduce using rule 24 (expression -> FALSE .)
    OR              reduce using rule 24 (expression -> FALSE .)
    RPAREN          reduce using rule 24 (expression -> FALSE .)


state 18

    (3) statement -> PRINT LPAREN expression . RPAREN SEMICOLON
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . TIMES expression
    (10) expression -> expression . DIVIDE expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression

    RPAREN          shift and go to state 35
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    DIVIDE          shift and go to state 25
    GT              shift and go to state 26
    LT              shift and go to state 27
    GE              shift and go to state 28
    LE              shift and go to state 29
    EQ              shift and go to state 30
    NE              shift and go to state 31
    AND             shift and go to state 32
    OR              shift and go to state 33


state 19

    (4) statement -> IF LPAREN expression . RPAREN LBRACE statements RBRACE
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . TIMES expression
    (10) expression -> expression . DIVIDE expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression

    RPAREN          shift and go to state 36
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    DIVIDE          shift and go to state 25
    GT              shift and go to state 26
    LT              shift and go to state 27
    GE              shift and go to state 28
    LE              shift and go to state 29
    EQ              shift and go to state 30
    NE              shift and go to state 31
    AND             shift and go to state 32
    OR              shift and go to state 33


state 20

    (1) statement -> VAR ID ASSIGN expression . SEMICOLON
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . TIMES expression
    (10) expression -> expression . DIVIDE expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression

    SEMICOLON       shift and go to state 37
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    DIVIDE          shift and go to state 25
    GT              shift and go to state 26
    LT              shift and go to state 27
    GE              shift and go to state 28
    LE              shift and go to state 29
    EQ              shift and go to state 30
    NE              shift and go to state 31
    AND             shift and go to state 32
    OR              shift and go to state 33


state 21

    (2) statement -> ID ASSIGN expression SEMICOLON .

    $end            reduce using rule 2 (statement -> ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 2 (statement -> ID ASSIGN expression SEMICOLON .)
    VAR             reduce using rule 2 (statement -> ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 2 (statement -> ID ASSIGN expression SEMICOLON .)
    PRINT           reduce using rule 2 (statement -> ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 2 (statement -> ID ASSIGN expression SEMICOLON .)


state 22

    (7) expression -> expression PLUS . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 38

state 23

    (8) expression -> expression MINUS . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 39

state 24

    (9) expression -> expression TIMES . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 40

state 25

    (10) expression -> expression DIVIDE . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 41

state 26

    (11) expression -> expression GT . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 42

state 27

    (12) expression -> expression LT . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 43

state 28

    (13) expression -> expression GE . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 44

state 29

    (14) expression -> expression LE . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 45

state 30

    (15) expression -> expression EQ . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 46

state 31

    (16) expression -> expression NE . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 47

state 32

    (17) expression -> expression AND . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 48

state 33

    (18) expression -> expression OR . expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression TIMES expression
    (10) expression -> . expression DIVIDE expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression LE expression
    (15) expression -> . expression EQ expression
    (16) expression -> . expression NE expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . STRING
    (21) expression -> . NUMBER
    (22) expression -> . ID
    (23) expression -> . TRUE
    (24) expression -> . FALSE

    NOT             shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    ID              shift and go to state 11
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17

    expression                     shift and go to state 49

state 34

    (19) expression -> NOT expression .
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . TIMES expression
    (10) expression -> expression . DIVIDE expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . LE expression
    (15) expression -> expression . EQ expression
    (16) expression -> expression . NE expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression

    SEMICOLON       reduce using rule 19 (expression -> NOT expression .)
    AND             reduce using rule 19 (expression -> NOT expression .)
    OR              reduce using rule 19 (expression -> NOT expression .)
    RPAREN          reduce using rule 19 (expression -> NOT expression .)
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    DIVIDE          shift and go to state 25
    GT              shift and go to state 26
    LT              shift and go to state 27
    GE              shift and go to state 28
    LE              shift and go to state 29
    EQ              shift and go to state 30
    NE              shift and go to state 31

  ! PLUS            [ reduce using rule 19 (expression -> NOT expression .) ]
  ! MINUS           [ reduce using rule 19 (expression -> NOT expression .) ]
  ! TIMES           [ reduce using rule 19 (expression -> NOT expression .) ]
  ! DIVIDE          [ reduce using rule 19 (expression -> NOT expression .) ]
  ! GT              [ reduce using rule 19 (expression -> NOT expression .) ]
  ! LT              [ reduce using rule 19 (expression -> NOT expression .) ]
  ! GE              [ reduce using rule 19 (expression -> NOT expression .) ]
  ! LE              [ reduce using rule 19 (expression -> NOT expression .) ]
  ! EQ              [ reduce using rule 19 (expression -> NOT expression .) ]
  ! NE              [ reduce using rule 19 (expression -> NOT expression .) ]
  ! AND             [ shift and go to state 32 ]
  ! OR              [ shift and go to state 33 ]
